--- a/style.css
+++ b/style.css
@@ -43,6 +43,19 @@ img {
     width: 100%;
 }
 
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 24px;
+}
+
+.burger {
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    background-color: #f5f6f7;
+}
+
 .hero {
     padding-top: 100px;
     background-image: url("./images/hero-bg.jpg");
